Fixed Nav collapse issues and highlight issues

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -37,7 +37,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 }
 
 
-html, body, .main-body  {
+html, body, .body-container  {
   position: relative;
   min-height: 100%;
   min-height: 100vh;
@@ -49,7 +49,7 @@ body {
   line-height: 22px;
 }
 
-.main-body {
+.body-container {
   height: 100%;
   width: 100%;
 }
